fix(snackbar-dialog): used less variable `@spacing-100` instead of `8px`

--- a/src/less/snackbar-dialog/snackbar-dialog.less
+++ b/src/less/snackbar-dialog/snackbar-dialog.less
@@ -8,12 +8,12 @@
     bottom: 40px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.28);
     .color-token(snackbar-dialog-foreground-color, color-foreground-on-inverse);
-    left: 8px;
+    left: @spacing-100;
     margin: auto;
     max-height: 40vh;
     max-width: 448px;
     position: fixed;
-    right: 8px;
+    right: @spacing-100;
     // Setting translateY to 0 to fix a bug in safari which does a double transform
     transform: translateY(0);
     will-change: opacity, transform;
